welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:6: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var compteur:Int
    ^Program:6: error: local variables must be initialized
var compteur:Int
    ^