welcome.lessons.welcome.loopfor.LoopFor.scala.code
var nbPas:Int=0
while (!estSurBiscuit()) {
  avance()
  nbPas=nbPas+1
}
var compteur:Int
for (compteur <- 1 to nbPas) {
  recule()
}